# lvmmag

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/lvmmag/: __init__.py  __main__.py  automate.py  filter.py  ingest.py  query.py
src/lvmmag/data/: OptPess_Apr20.txt  lvm_magnitude.sql
tests/: test_lvmmag.py
